fix: app-layout adjust top margin, aligned with rlb-content

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -11,10 +11,11 @@
 
 .rlb-sidebar {
   position: fixed;
-  top: $header-height;
+  // top: $header-height;
+  margin-top: $header-height;
   left: 0;
   width: $sidebar-width;
-  height: calc(100%);
+  height: calc(100% - $header-height);
   box-sizing: border-box;
 }
 
